# encoder_decoder_FWI

./: .gitignore  README.md  denise_fwi.py  main.py  network.py  notebook.ipynb  plot_current.py  pyapi_denise.py  pyproject.toml  run_sth_forward.py  sth_model.py  train.py
docs/superpowers/plans/: 2026-04-05-encoder-decoder-fwi.md
docs/superpowers/specs/: 2026-04-05-encoder-decoder-fwi-design.md
logs/: encoder_decoder_v1.txt  encoder_decoder_v2.txt
par/: DENISE_marm_OBC_FWI.inp
par/start/: marmousi_II_marine_source_signal.0.su.shot1  marmousi_II_marine_source_signal.1.su.shot33
taper/: taper_coeff_hor.bin.1.1  taper_coeff_hor.bin.2.0
tests/: test_denise_fwi.py  test_network.py
